--- a/LLM/web/Interface_V2.html
+++ b/LLM/web/Interface_V2.html
@@ -201,6 +201,39 @@
       animation: spin 0.9s linear infinite;
     }
 
+    /* --- CAMERA SETUP --- */
+    .camera-wrap {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 14px;
+      margin-top: 18px;
+    }
+
+    .camera-video {
+      width: 100%;
+      max-height: 360px;
+      background: #111;
+      border-radius: 12px;
+      object-fit: cover;
+    }
+
+    .camera-row {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    select {
+      font-size: 14px;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      min-width: 280px;
+      max-width: 100%;
+    }
+
   </style>
 </head>
 
@@ -249,6 +282,31 @@
   </p>
 
   <button class="start-button" onclick="startTest()">Commencer le test</button>
+</div>
+
+<!-- PAGE CAMERA (between login and start) -->
+<div id="cameraSetup" class="page">
+  <div class="header-logos">
+    <img src="{{ url_for('static', filename='logo-crossing.png') }}">
+    <img src="{{ url_for('static', filename='logo-UT.png') }}">
+  </div>
+
+  <h1 class="title" style="font-size: 28px;">Caméra</h1>
+  <p>Choisissez la caméra à utiliser. Un aperçu s’affiche ci-dessous.</p>
+
+  <div class="camera-wrap">
+    <div class="camera-row">
+      <label for="cameraSelect" style="font-size: 14px; color:#333;">Périphérique :</label>
+      <select id="cameraSelect"></select>
+    </div>
+    <video id="cameraPreview" class="camera-video" autoplay playsinline muted></video>
+
+    <div id="cameraHint" style="font-size: 12px; color:#666; text-align:center;"></div>
+
+    <div class="camera-row" style="margin-top: 6px;">
+      <button class="start-button" style="font-size:16px; padding:10px 18px;" onclick="continueAfterCamera()">Continuer</button>
+    </div>
+  </div>
 </div>
 
 <!-- PAGE QUESTIONS -->
@@ -301,6 +359,13 @@
   let backgroundPollingActive = false;
   let answersSubmittedCount = 0;
 
+  // Prefetch quiz right after login.
+  let prefetchedTestId = null;
+  let prefetchedTotal = 0;
+
+  // Camera
+  let cameraStream = null;
+
   let currentQuestion = 0;
   let questionStartTime = 0;
   let testStartTime = 0;
@@ -319,6 +384,9 @@
   const reviewStatus = document.getElementById("reviewStatus");
   const reviewContent = document.getElementById("reviewContent");
   const reviewContinue = document.getElementById("reviewContinue");
+  const cameraSelect = document.getElementById("cameraSelect");
+  const cameraPreview = document.getElementById("cameraPreview");
+  const cameraHint = document.getElementById("cameraHint");
 
   function setLoading(isLoading) {
     if (isLoading) {
@@ -383,11 +451,133 @@
         return;
       }
       userName = data.name;
-      showPage("home");
+
+      // Start quiz generation early (non-blocking), then show camera page.
+      prefetchQuiz();
+      showPage("cameraSetup");
+      await initCameraSetup();
     } catch (e) {
       console.error(e);
       alert("Erreur d'identification");
     }
+  }
+
+  async function prefetchQuiz() {
+    if (!userName) return;
+    try {
+      const r = await fetch("/api/prefetch_test", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ name: userName, n: 4, difficulty: "easy" })
+      });
+      const d = await r.json();
+      if (d && d.ok) {
+        prefetchedTestId = d.test_id;
+      } else {
+        console.warn("prefetch_test failed:", d);
+        prefetchedTestId = null;
+      }
+    } catch (e) {
+      console.warn("prefetch_test error:", e);
+      prefetchedTestId = null;
+    }
+  }
+
+  async function waitForPrefetchReady() {
+    if (!prefetchedTestId) return null;
+    for (;;) {
+      const r = await fetch(`/api/test_status/${prefetchedTestId}`);
+      const d = await r.json();
+      if (!d || !d.ok) {
+        return null;
+      }
+      if (d.status === "ready") {
+        prefetchedTotal = d.total || 0;
+        return d;
+      }
+      if (d.status === "failed") {
+        console.warn("prefetch failed:", d.error);
+        return null;
+      }
+      // creating
+      await new Promise(res => setTimeout(res, 300));
+    }
+  }
+
+  async function initCameraSetup() {
+    if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+      if (cameraHint) cameraHint.textContent = "Webcam non disponible dans ce navigateur.";
+      return;
+    }
+
+    try {
+      // Request permission first so device labels appear.
+      const tmp = await navigator.mediaDevices.getUserMedia({ video: true, audio: false });
+      // Stop immediately; we will reopen with selected device.
+      tmp.getTracks().forEach(t => t.stop());
+    } catch (e) {
+      if (cameraHint) cameraHint.textContent = "Autorisation caméra refusée (vous pouvez continuer).";
+      return;
+    }
+
+    await refreshCameraDeviceList();
+
+    if (cameraSelect) {
+      cameraSelect.addEventListener("change", async () => {
+        await startCameraPreview(cameraSelect.value);
+      });
+      // Autostart first device if any.
+      if (cameraSelect.options.length > 0) {
+        await startCameraPreview(cameraSelect.value);
+      }
+    }
+  }
+
+  async function refreshCameraDeviceList() {
+    if (!cameraSelect) return;
+    cameraSelect.innerHTML = "";
+    const devices = await navigator.mediaDevices.enumerateDevices();
+    const videos = devices.filter(d => d.kind === "videoinput");
+
+    videos.forEach((d, idx) => {
+      const opt = document.createElement("option");
+      opt.value = d.deviceId;
+      opt.textContent = d.label || `Caméra ${idx + 1}`;
+      cameraSelect.appendChild(opt);
+    });
+
+    if (cameraHint) {
+      cameraHint.textContent = videos.length
+        ? "Sélectionnez une caméra si besoin."
+        : "Aucune caméra détectée (vous pouvez continuer).";
+    }
+  }
+
+  async function startCameraPreview(deviceId) {
+    if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) return;
+
+    // Stop previous stream.
+    if (cameraStream) {
+      cameraStream.getTracks().forEach(t => t.stop());
+      cameraStream = null;
+    }
+
+    const constraints = deviceId
+      ? { video: { deviceId: { exact: deviceId } }, audio: false }
+      : { video: true, audio: false };
+
+    try {
+      cameraStream = await navigator.mediaDevices.getUserMedia(constraints);
+      if (cameraPreview) cameraPreview.srcObject = cameraStream;
+      if (cameraHint) cameraHint.textContent = "Aperçu caméra actif.";
+    } catch (e) {
+      console.warn("startCameraPreview error:", e);
+      if (cameraHint) cameraHint.textContent = "Impossible de démarrer la caméra (vous pouvez continuer).";
+    }
+  }
+
+  function continueAfterCamera() {
+    showPage("home");
   }
 
   async function startTest() {
@@ -400,6 +590,20 @@
 
     try {
       setLoading(true);
+
+      // Prefer the prefetched test if available.
+      if (prefetchedTestId) {
+        const st = await waitForPrefetchReady();
+        if (st && st.ok && st.status === "ready") {
+          testId = prefetchedTestId;
+          totalQuestions = prefetchedTotal || st.total || 0;
+          await loadQuestion(0);
+          return;
+        }
+        // Prefetch failed; fall back to blocking start_test.
+        prefetchedTestId = null;
+      }
+
       const startResp = await fetch("/api/start_test", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
@@ -651,7 +855,16 @@
   function restart() {
     testId = null;
     userName = "";
+    prefetchedTestId = null;
+    prefetchedTotal = 0;
     if (nameInput) nameInput.value = "";
+
+    if (cameraStream) {
+      cameraStream.getTracks().forEach(t => t.stop());
+      cameraStream = null;
+    }
+    if (cameraPreview) cameraPreview.srcObject = null;
+
     showPage("identify");
     if (nameInput) nameInput.focus();
   }
