--- a/LLM/web/Interface_test_Manon.html
+++ b/LLM/web/Interface_test_Manon.html
@@ -170,19 +170,37 @@
       align-items: center;
       justify-content: center;
       background: rgba(245,245,245,0.8);
+      backdrop-filter: blur(2px);
       z-index: 9999;
     }
 
     .loading-overlay.active { display: flex; }
 
+    .loading-card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 12px;
+      padding: 22px 26px;
+      border-radius: 16px;
+      background: rgba(255,255,255,0.92);
+      box-shadow: 0 8px 28px rgba(0,0,0,0.12);
+    }
+
     .spinner {
       width: 64px;
       height: 64px;
-      border: 8px solid #cfd8dc;
-      border-top-color: #1976d2;
       border-radius: 50%;
+      background: conic-gradient(from 180deg, #1976d2, #42a5f5, #90caf9, #1976d2);
+      -webkit-mask: radial-gradient(farthest-side, transparent 62%, #000 63%);
+      mask: radial-gradient(farthest-side, transparent 62%, #000 63%);
       animation: spin 0.9s linear infinite;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+    }
+
+    .loading-text {
+      font-size: 14px;
+      color: #333;
+      letter-spacing: 0.2px;
     }
 
     @keyframes spin {
@@ -361,7 +379,10 @@
 
 <!-- LOADING OVERLAY -->
 <div id="loading" class="loading-overlay" aria-hidden="true">
-  <div class="spinner" aria-label="Chargement"></div>
+  <div class="loading-card" role="status" aria-live="polite">
+    <div class="spinner" aria-label="Chargement"></div>
+    <div id="loadingText" class="loading-text"></div>
+  </div>
 </div>
 
 <!-- SMALL GRADING INDICATOR -->
@@ -584,6 +605,7 @@
   const progressFill = document.getElementById("progressFill");
   const questionCounter = document.getElementById("questionCounter");
   const loadingOverlay = document.getElementById("loading");
+  const loadingText = document.getElementById("loadingText");
   const gradingIndicator = document.getElementById("gradingIndicator");
   const nameInput = document.getElementById("nameInput");
   // Valider avec la touche Entrée sur le champ nom
@@ -607,7 +629,28 @@
   const tirednessValue = document.getElementById("tirednessValue");
   const reviewMeta = document.getElementById("reviewMeta");
 
-  function setLoading(isLoading) {
+  const DEFAULT_LOADING_TEXT = "Chargement…";
+  const LLM_GENERATION_ETA_SECONDS = 30;
+  const GRADING_SECONDS_PER_ANSWER = 10;
+
+  function formatEta(seconds) {
+    const s = Math.max(0, Math.floor(Number(seconds) || 0));
+    const m = Math.floor(s / 60);
+    const r = s % 60;
+    if (m <= 0) return `${r}s~`;
+    return `${m}m${String(r).padStart(2, "0")}s~`;
+  }
+
+  function setLoading(isLoading, message) {
+    if (loadingText) {
+      if (isLoading) {
+        const msg = (typeof message === "string" && message.trim()) ? message : DEFAULT_LOADING_TEXT;
+        loadingText.textContent = msg;
+      } else {
+        loadingText.textContent = "";
+      }
+    }
+
     if (isLoading) {
       loadingOverlay.classList.add("active");
       loadingOverlay.setAttribute("aria-hidden", "false");
@@ -781,6 +824,16 @@
         console.warn("prefetch failed:", d.error);
         return null;
       }
+
+      // creating: update the big overlay text with a rough ETA + retry count.
+      const attempt = Number.isFinite(d.attempt) ? Number(d.attempt) : 0;
+      const maxAttempts = Number.isFinite(d.max_attempts) ? Number(d.max_attempts) : 0;
+      let retryText = "";
+      if (attempt > 1) {
+        retryText = maxAttempts > 0 ? ` (retry ${attempt}/${maxAttempts})` : ` (retry ${attempt})`;
+      }
+      setLoading(true, `LLM generating…${retryText} • ETA ${formatEta(LLM_GENERATION_ETA_SECONDS)}`);
+
       // creating
       await new Promise(res => setTimeout(res, 300));
     }
@@ -904,7 +957,7 @@
 
     // Ensure we have a prefetched test to attach meta + start questions.
     try {
-      setLoading(true);
+      setLoading(true, "LLM generating…");
       if (prefetchPromise) {
         await prefetchPromise;
       }
@@ -1163,7 +1216,9 @@ function selectQcmChoice(index) {
           setGrading(true);
           const done = stData.progress || 0;
           const denom = answersSubmittedCount || stData.total || totalQuestions || 0;
-          setGradingText(`Correction… (${done}/${denom})`);
+          const remaining = Math.max(0, (denom || 0) - (done || 0));
+          const eta = formatEta(remaining * GRADING_SECONDS_PER_ANSWER);
+          setGradingText(`Correction… (${done}/${denom}) • ETA ${eta}`);
         }
 
         if (stData.status === "processing" || stData.status === "queued") {
